--- a/fr_Bladel.wiki
+++ b/fr_Bladel.wiki
@@ -69,9 +69,7 @@ La Bladel est une variante tactique et incisive de la défense hollandaise pour 
 ''' ECO : ''' A84 <br>
 ''' après : ''' 4.Nf3 c6 5.e3 d6 6.Be2 Bg7 
 }} <p />
-
-The Closed Variations<ref>Шахматы: энциклопедический словарь / гл. ред. А. Е. Карпов. — М.: Советская энциклопедия, 1990. — С. 516—517. — 621 с. — 100 000 экз. — ISBN 5-85270-005-3.</ref> are a more positional approach by white, which can lead to complex but tactical positions when the postions<ref>Атаров Е. «Цена успеха разною бывает…» (интервью с А. Юсуповым) // «64 — Шахматное обозрение». — 1995. — № 1—2. — С. 24—25.</ref><ref>Линдер И. М. Юсупов Артур Маякович // Шахматная энциклопедия / И. М. Линдер, В. И. Линдер. — М. : ООО «Издательство АСТ» : ООО «Издательство Астрель», 2004. — С. 314—315. — 320 с. — ISBN 5-17-006939-1. — ISBN 5-271-06492-1.</ref> are opening up later on. White is going to expand on the queen side and maintain a spatial advantage. Black can either decide to castle long and launch a king side attack or, typically, black castles short and tries to prepare for the e5 push. White can, however, decide to push the h-pawn and make an attack later on. 
-
+Les variantes fermées<ref>Шахматы: энциклопедический словарь / гл. ред. А. Е. Карпов. — М.: Советская энциклопедия, 1990. — С. 516—517. — 621 с. — 100 000 экз. — ISBN 5-85270-005-3.</ref> constituent une approche plus positionnelle de la part des blancs, qui peut mener à des positions complexes mais tactiques lorsque les positions<ref>Атаров Е. «Цена успеха разною бывает…» (интервью с А. Юсуповым) // «64 — Шахматное обозрение». — 1995. — № 1—2. — С. 24—25.</ref><ref>Линдер И. М. Юсупов Артур Маякович // Шахматная энциклопедия / И. М. Линдер, В. И. Линдер. — М. : ООО «Издательство АСТ» : ООО «Издательство Астрель», 2004. — С. 314—315. — 320 с. — ISBN 5-17-006939-1. — ISBN 5-271-06492-1.</ref> s'ouvrent plus tard. Les blancs vont s'étendre du côté de la reine et conserver un avantage spatial. Les noirs peuvent soit décider de roquer long et lancer une attaque du côté du roi, soit, comme c'est généralement le cas, roquer court et essayer de se préparer à la poussée e5. Les blancs peuvent toutefois décider de pousser le pion h et de lancer une attaque plus tard.
 
 {{Clr}}
 === Attaque Beijing ===
