--- a/fr_Bladel.wiki
+++ b/fr_Bladel.wiki
@@ -144,7 +144,7 @@ En conséquence, les Blancs ont atteint une domination complète au centre. Cett
 
 {{Clr}}
 
-== The History of Bladel ==
+== l'Histoire de Bladel ==
 {{Chaturanga diagram
 | tright|check=no
 |
@@ -160,21 +160,14 @@ En conséquence, les Blancs ont atteint une domination complète au centre. Cett
 }}
 {{clear}}
 
-The Bladel Defence is actually older than modern chess as we know it today itself. The origin of chess dates back to the 6th century in india. Back than it was called '''Chaturanga'''<ref>by Tagore, Rabindra Nath, chessvariants.org/historic.dir/chaturanga.html</ref><ref>Chaturanga: archive.org/details/in.ernet.dli 600 AD</ref><ref>book, Micro review: 'Chaturanga' by Anand Neelakantan is the secon ..Read more at:
-timesofindia.indiatimes.com/articleshow/77745607.cms?utm_source=contentofinterest&utm_medium=text&utm_campaign=cppst</ref>. It did have similar pieces of a modern chess board, but the rules were completely different. Later on it the 13th century it became the '''Shantranj'''<ref>Shatranj (Arabic: شطرنج, pronounced [ʃaˈtˤrandʒ]; from Middle Persian chatrang) is an old form of chess, as played in the Sasanian Empire. Its origins lie in the Indian game of chaturanga.[1] Modern chess gradually developed from this game, as it was introduced to Europe by contacts in Muslim Al-Andalus (modern Spain) and in Sicily in the 10th century. In modern Persian, the term is also used as the translation of chess.[2]</ref><ref>Parlett, David (1999). "Shatranj (Islamic Chess)". The Oxford History of Board Games. Oxford University Press Inc. pp. 296–99. ISBN 0-19-212998-8.</ref><ref>Reference	 : Sahih Muslim 1300, In-book reference	 : Book 15, Hadith 347
+La Défense Bladel est en réalité plus ancienne que les échecs modernes tels que nous les connaissons aujourd'hui. L'origine des échecs remonte au 6e siècle en Inde. À cette époque, le jeu s'appelait '''Chaturanga'''<ref>by Tagore, Rabindra Nath, chessvariants.org/historic.dir/chaturanga.html</ref><ref>Chaturanga: archive.org/details/in.ernet.dli 600 AD</ref><ref>book, Micro review: 'Chaturanga' by Anand Neelakantan is the secon ..Read more at:
+timesofindia.indiatimes.com/articleshow/77745607.cms?utm_source=contentofinterest&utm_medium=text&utm_campaign=cppst</ref>. Il comportait des pièces similaires à celles d'un échiquier moderne, mais les règles étaient complètement différentes. Plus tard, au 13e siècle, il est devenu le '''Shantranj'''<ref>Shatranj (Arabic: شطرنج, pronounced [ʃaˈtˤrandʒ]; from Middle Persian chatrang) is an old form of chess, as played in the Sasanian Empire. Its origins lie in the Indian game of chaturanga.[1] Modern chess gradually developed from this game, as it was introduced to Europe by contacts in Muslim Al-Andalus (modern Spain) and in Sicily in the 10th century. In modern Persian, the term is also used as the translation of chess.[2]</ref><ref>Parlett, David (1999). "Shatranj (Islamic Chess)". The Oxford History of Board Games. Oxford University Press Inc. pp. 296–99. ISBN 0-19-212998-8.</ref><ref>Reference	 : Sahih Muslim 1300, In-book reference	 : Book 15, Hadith 347
 USC-MSA web (English) reference	 : Book 7, Hadith 2982
-  (deprecated numbering scheme)</ref>
+  (deprecated numbering scheme)</ref>.
 
-As Shatranj spread through the Islamic world and into Europe via trade routes like the Silk Road, it underwent significant transformations.
-By the 13th century, the pawn gained the ability to move two squares on its first move, though this rule took centuries to be universally accepted. The most pivotal changes occurred after 1300, when the weak counselor piece was reimagined as the powerful queen, gaining the ability to move any number of squares vertically, horizontally, or diagonally.
-This, along with the enhancement of the bishop’s range, dramatically increased the game’s pace and complexity. However, king and quen had been placed to opposite sides. The black king (not the queen) was positioned on d8. Conversly, the queen(instead of the king) was positioned on e8. Therefore f5 playing as black wasn't nearly as risky as today, as it didn't expose your king at all. Back in those days the bladel was already born, because back then this position was much safer. 
-<br>
-The final change was made in 1475, when the king and the queen has been switched positions, so that it mirror the white side. 
-This made the the bladel defence much riskier to play as it exposed the king even more (after h5). Only much later in the 1800s the bladel made its return to chess. 
+Alors que le Shatranj se répandait à travers le monde islamique et en Europe via des routes commerciales comme la Route de la Soie, il a subi des transformations significatives. Au 13e siècle, le pion a acquis la capacité de se déplacer de deux cases lors de son premier coup, bien que cette règle ait mis des siècles à être universellement acceptée. Les changements les plus pivotants ont eu lieu après 1300, lorsque la faible pièce du conseiller a été réimaginée en une puissante reine, capable de se déplacer de n'importe quel nombre de cases verticalement, horizontalement ou en diagonale. Cela, ainsi que l'augmentation de la portée du fou, a considérablement augmenté le rythme et la complexité du jeu. Cependant, le roi et la reine avaient été placés à des côtés opposés. Le roi noir (et non la reine) était positionné sur d8. Inversement, la reine (au lieu du roi) était positionnée sur e8. Par conséquent, jouer f5 en tant que noir n'était pas aussi risqué qu'aujourd'hui, car cela n'exposait pas du tout votre roi. À cette époque, le Bladel était déjà né, car cette position était beaucoup plus sûre.
 
-These reforms, likely originating in Spain, marked the birth of modern chess, making checkmate far more common and dynamic.
-Additional rules such as castling and en passant capture, known since the 15th century, became widely adopted by the 18th century, further standardizing the game.
-Regional variations gradually gave way to a unified set of rules, culminating in the establishment of international competitions and organizations like FIDE in the 20th century. Thus, chess evolved from a symbolic war game in ancient India to the globally standardized, highly competitive sport played today.
+Le dernier changement a été apporté en 1475, lorsque le roi et la reine ont été échangés pour refléter le côté blanc. Cela a rendu la défense Bladel beaucoup plus risquée à jouer car elle exposait encore plus le roi (après h5). Ce n'est que beaucoup plus tard, dans les années 1800, que le Bladel a fait son retour dans les échecs. Ces réformes, probablement originaires d'Espagne, ont marqué la naissance des échecs modernes, rendant le échec et mat beaucoup plus courant et dynamique. Des règles supplémentaires telles que le roque et la prise en passant, connues depuis le 15e siècle, ont été largement adoptées au 18e siècle, standardisant encore davantage le jeu. Les variations régionales ont progressivement cédé la place à un ensemble unifié de règles, aboutissant à la création de compétitions internationales et d'organisations comme la FIDE au 20e siècle. Ainsi, les échecs ont évolué d'un jeu de guerre symbolique dans l'Inde ancienne au sport mondialement standardisé et hautement compétitif joué aujourd'hui.
 
 == Theory table ==
 
