--- a/fr_Bladel_open.wiki
+++ b/fr_Bladel_open.wiki
@@ -32,3 +32,228 @@ Les Noirs ont plusieurs réponses possibles :
 * Pour entrer dans les variantes modernes : **4... fxe4 5. Nxe4 (Cxe4) Bg7 (Fg7) 6. Nf3 (Cf3) c6 7. Bd3 (Fd3) d5**<ref>Gaige J. *Chess Personalia*, Jefferson 1987</ref><ref>Kotov A. & Yudovich M. *The Soviet Chess School*, Moscow 1983</ref><ref>Levy D. & O’Connell K. *Oxford Encyclopedia of Chess Games*, 1981</ref><ref>Linde A. *Van der Geschichte und Literature des Schachspiels*, Olms 1981</ref>.
 
 Les Noirs ne doivent pas jouer **d5** immédiatement<ref>Gligorić, Svetozar (1970). *Selected Chess Masterpieces*. Pitman. ISBN 978-0-273-40414-9.</ref><ref>Eales R. *Chess: The History of a Game*, London 1985</ref>. Le coup **d5** serait contré par **exd4**, ce qui leur ferait perdre le contrôle du centre. En conséquence, leur roque côté roi pourrait s’effondrer. Il est donc préférable de jouer la variante Bladel, en particulier les variantes ouvertes, de manière hypermoderne. Au lieu de pousser aveuglément vers le centre, les Noirs cherchent à contrôler le centre de l’extérieur avec leurs pièces légères<ref>Alekhine, Alexander (1921). *Das Schachleben in Sowiet-Russland* (in German). Kagan.</ref><ref>Alekhine, Alexander (1939). *My Best Games of Chess 1924–1937*. Harcourt (1939 ed.); David McKay (2000 ed.). ISBN 978-0679140245. (2000 ed.)</ref><ref>Alekhine, Alexander (1924). *Mis mejores partidas 1908–1923* (in Spanish). Afrodisio Aguado (1924 ed.); David McKay (1972 ed.)</ref>. Le fou doit se rendre sur la case **g7** dès que possible pour exercer une influence sur le centre. Si les Noirs veulent jouer **d5**, ils doivent d’abord préparer ce coup avec **c6**.
+
+== Tableau théorique ==
+
+{{ChessTable}}
+
+'''1. d4 f5 2.c4 g6 3.Nc3 Nh6 4.e4'''
+<table border="0" cellspacing="0" cellpadding="4">
+  <tr>
+	<th></th>
+	<th align="left">4</th>
+	<th align="left">5</th>
+	<th align="left">6</th>
+	<th align="left">7</th>
+        <th align="left">8</th>
+        <th align="left">9</th> 
+        <th align="left">10</th>      
+        <th align="left">11</th>
+        <th align="left">12</th>      
+  </tr>
+  <tr>
+	<th align="right">Bladel, les variations ouvertes </th>
+	<td>..<br>d6</td>
+	<td>Nf3<br>Bg7</td>
+	<td>exf5<br>Bxf5</td>
+	<td><br></td>
+	<td><br></td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+  </tr>
+  <tr>
+	<th align="right"></th>
+	<td>..<br>d6</td>
+	<td>Nf3<br>Bg7</td>
+	<td>exf5<br>Nxf5</td>
+	<td><br></td>
+	<td><br></td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+  </tr>
+  <tr>
+	<th align="right"></th>
+	<td>..<br>d6</td>
+	<td>Nf3<br>Bg7</td>
+	<td>exf5<br>gxf5</td>
+	<td><br></td>
+	<td><br></td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+  </tr>
+  <tr>
+	<th align="right">Bladel, les variations modernes </th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>...</td>
+	<td><br></td>
+	<td><br></td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>c5<br>...</td>
+	<td><br></td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>d5<br>...</td>
+	<td><br></td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>...</td>
+	<td><br></td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>Ng5<br>...</td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+	<tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>Bxh6<br>...</td>
+	<td><br></td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>cxd5<br>cxd5</td>
+	<td>Bxh6<br>Bxh6</td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>cxd5<br>cxd5</td>
+	<td>Nc3<br>...</td>
+        <td><br></td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>cxd5<br>cxd5</td>
+	<td>Bb5+<br>Nc6</td>
+        <td>Bxh6<br>Bxh6</td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>cxd5<br>cxd5</td>
+	<td>Bb5+<br>Nc6</td>
+        <td>Bxh6<br>Bxh6</td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+    <tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>cxd5<br>cxd5</td>
+	<td>Bb5+<br>Nc6</td>
+        <td>Nd2<br>...</td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+	<tr>
+	<th align="right"></th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>cxd5<br>cxd5</td>
+	<td>Bb5+<br>Nc6</td>
+        <td>Nc3<br>...</td>
+        <td><br></td>
+	<td>+/=</td>
+    </tr>
+   <tr>
+	<th align="right">Bladel, la ligne principale</th>
+	<td>..<br>fxe4</td>
+	<td>Nxe4<br>Bg7</td>
+	<td>[[/4...fxe4/5. Nxe4/5...Bg7/6. Nf3|Nf3]]<br>c6</td>
+	<td>Bd3<br>d5</td>
+	<td>cxd5<br>cxd5</td>
+	<td>Bb5+<br>Nc6</td>
+        <td>Bxc6+<br>bxc6</td>
+        <td>Nc5<br>...</td>
+	<td>+/-</td>
+    </tr>   
+</table>
+
+{{ChessMid}}
+{{Wikipedia|Dutch Defence}}
+
+== Références ==
+
+{{reflist}}
+* Lichess Studies, Dutch Defence, Bladel Family
+* Chess.com, Library: Bladel Modern Variations
+* Gamenot.com, annotated games: Dutch Defence Bladel Open
+
+
+[[fi:Shakkiaapinen/Peli/1. d4/1...f5/2. h3]]
